<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.seunindustries.finddrive.AddDestActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="20dip" />

    <EditText
        android:id="@+id/editdestname"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:singleLine="true"
        android:hint="@string/destname"
        android:textSize="16dip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/editaddr"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:layout_weight="4"
            android:hint="@string/destaddr"
            android:textSize="16dip" />

        <Button
            android:id="@+id/getlatlgt"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/getlatlgt"
            android:textSize="14sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dip" />

    <EditText
        android:id="@+id/editlat"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:inputType="phone"
        android:hint="@string/destlat"
        android:textSize="16dip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dip" />

    <EditText
        android:id="@+id/editlgt"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:inputType="phone"
        android:hint="@string/destlgt"
        android:textSize="16dip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center|center_vertical">
        <Button
            android:id="@+id/register"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/register"
            android:textSize="16dip"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_vertical" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16dip"
            android:gravity="center|center_vertical" />
    </LinearLayout>
</LinearLayout>
