<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >


    <Button
        android:id="@+id/listbutton"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:text="@string/viewlist"
        android:textSize="24dip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dip" />

    <Button
        android:id="@+id/managebutton"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:text="@string/managelist"
        android:textSize="24dip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dip" />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:text="@string/exit"
        android:textSize="24dip" />
</LinearLayout>
