<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.seunindustries.finddrive.AddListAcitivity">


    <EditText
        android:id="@+id/editlistname"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:hint="@string/listname"
        android:textSize="24dip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dip" />

    <Button
        android:id="@+id/adddest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adddest"
        android:textSize="20dip"
        android:layout_gravity="left" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="280dip">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center|center_vertical">
        <Button
            android:id="@+id/register"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/register"
            android:textSize="24dip"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_vertical" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="24dip"
            android:gravity="center|center_vertical" />
    </LinearLayout>

</LinearLayout>
