<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.seunindustries.finddrive.ViewListOneActivity">


    <Button
        android:id="@+id/drivestart"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:text="@string/drivestart"
        android:textSize="24dip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectdest"
            android:textSize="20sp" />

        <Button
            android:id="@+id/viewmap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dip"
            android:text="@string/viewmap"
            android:textSize="20sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/destlistview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>
</LinearLayout>
